[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentset-streamlit-demo"
version = "0.1.0"
description = "A Streamlit app for document ingestion and Q&A using Agentset and OpenAI"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "agentset>=0.6.4",
]

[project.urls]
Homepage = "https://github.com/agentset-ai/agentset-streamlit-demo"
Repository = "https://github.com/agentset-ai/agentset-streamlit-demo"

[project.scripts]
agentset-streamlit-demo = "agentset_streamlit_demo.cli:main"
